# NMSSaveExplorer-Qt

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-linux.yml  cmake-windows.yml
src/: MainWindow.cpp  MainWindow.h  main.cpp
src/core/: BackupManager.cpp  BackupManager.h  JsonMapper.cpp  JsonMapper.h  LosslessJsonDocument.cpp  LosslessJsonDocument.h  ManifestManager.cpp  ManifestManager.h  ResourceLocator.cpp  ResourceLocator.h  SaveCache.cpp  SaveCache.h  SaveDecoder.cpp  SaveDecoder.h  SaveEncoder.cpp  SaveEncoder.h  SaveGameLocator.cpp  SaveGameLocator.h  SaveJsonModel.cpp  SaveJsonModel.h  SpookyHash.h  Utf8Diagnostics.cpp  Utf8Diagnostics.h  XXTEA.h
src/corvette/: CorvetteManagerPage.cpp  CorvetteManagerPage.h
src/frigate/: FrigateManagerPage.cpp  FrigateManagerPage.h
src/inventory/: InventoryEditorPage.cpp  InventoryEditorPage.h  InventoryGridWidget.cpp  InventoryGridWidget.h  ItemSelectionDialog.cpp  ItemSelectionDialog.h  KnownProductDialog.cpp  KnownProductDialog.h  KnownProductPage.cpp  KnownProductPage.h  KnownTechnologyDialog.cpp  KnownTechnologyDialog.h  KnownTechnologyPage.cpp  KnownTechnologyPage.h
src/registry/: IconRegistry.cpp  IconRegistry.h  ItemCatalog.cpp  ItemCatalog.h  ItemDefinitionRegistry.cpp  ItemDefinitionRegistry.h  LocalizationRegistry.cpp  LocalizationRegistry.h
src/resources/: item_catalog.json  localisation_map.json  mapping.json
src/resources/data/: IDLOOKUPPATHS.MXML  LEGACYITEMTABLE.MXML  MASTER_LOCALISATION.mxml  NMS_BASEPARTPRODUCTS.MXML  NMS_LOC1_USENGLISH.MXML  NMS_LOC4_USENGLISH.MXML  NMS_LOC5_USENGLISH.MXML  NMS_LOC6_USENGLISH.MXML  NMS_LOC7_USENGLISH.MXML  NMS_LOC8_USENGLISH.MXML  NMS_LOC9_USENGLISH.MXML  NMS_MODULARCUSTOMISATIONPRODUCTS.MXML  NMS_REALITY_GCPROCEDURALTECHNOLOGYTABLE.MXML  NMS_REALITY_GCPRODUCTTABLE.MXML  NMS_REALITY_GCSUBSTANCETABLE.MXML  NMS_REALITY_GCTECHNOLOGYTABLE.MXML  NMS_UPDATE3_USENGLISH.MXML  PROCEDURALPRODUCTTABLE.MXML  SETTLEMENTPERKSTABLE.MXML  TECHBOXTABLE.MXML  idlookuppaths.MXML  legacyitemtable.MXML  nms_basepartproducts.MXML  nms_loc1_usenglish.MXML  nms_loc4_usenglish.MXML  nms_loc5_usenglish.MXML  nms_loc6_usenglish.MXML  nms_loc7_usenglish.MXML  nms_loc8_usenglish.MXML  nms_loc9_usenglish.MXML  nms_modularcustomisationproducts.MXML  nms_reality_gcproceduraltechnologytable.MXML  nms_reality_gcproducttable.MXML  nms_reality_gcsubstancetable.MXML  nms_reality_gctechnologytable.MXML  nms_update3_usenglish.MXML  proceduralproducttable.MXML  settlementperkstable.MXML  techboxtable.MXML
src/settlement/: SettlementManagerPage.cpp  SettlementManagerPage.h
src/ship/: ShipManagerPage.cpp  ShipManagerPage.h
src/ui/: BackupsPage.cpp  BackupsPage.h  JsonExplorerPage.cpp  JsonExplorerPage.h  LoadingOverlay.cpp  LoadingOverlay.h  MaterialLookupDialog.cpp  MaterialLookupDialog.h  WelcomePage.cpp  WelcomePage.h
tools/: ItemCatalogBuilder.cpp
